# waffel

./: README.md  hello.py  pyproject.toml  test
.github/workflows/: python-ci.yml
src/waffel/: classes.py  classes_test.py  data.py  data_test.py  funds.py  funds_test.py  main.py  pdf.py
tests/: integration_test.py
tests/testdata/: fachschaftenliste.md  students.csv
